# xrootd

cmake/: XRootDSystemCheck.cmake
src/: XrdHttp.cmake
src/XrdCl/: XrdClFile.cc  XrdClFile.hh  XrdClFileStateHandler.cc  XrdClFileStateHandler.hh  XrdClFileSystem.cc  XrdClFileSystem.hh  XrdClPollerBuiltIn.cc  XrdClXRootDResponses.cc  XrdClXRootDResponses.hh  XrdClXRootDTransport.cc
src/XrdHttp/: CMakeLists.txt  ReadWriteOp.hh  XrdHttpContentRangeParser.cc  XrdHttpContentRangeParser.hh  XrdHttpExtHandler.cc  XrdHttpExtHandler.hh  XrdHttpHeaderUtils.cc  XrdHttpHeaderUtils.hh  XrdHttpProtocol.cc  XrdHttpProtocol.hh  XrdHttpReq.cc  XrdHttpReq.hh  XrdHttpUtils.cc  XrdHttpUtils.hh
src/XrdHttpTpc/: CMakeLists.txt  XrdHttpTpcState.cc  XrdHttpTpcState.hh  XrdHttpTpcTPC.cc  XrdHttpTpcTPC.hh
src/XrdNet/: XrdNetPMark.hh  XrdNetPMarkCfg.cc  XrdNetPMarkFF.cc
src/XrdOfs/: XrdOfs.cc  XrdOfs.hh
src/XrdOss/: XrdOss.cc  XrdOss.hh  XrdOssApi.cc  XrdOssApi.hh
src/XrdOuc/: XrdOucUtils.cc  XrdOucUtils.hh
src/XrdPosix/: XrdPosix.cc  XrdPosix.hh  XrdPosixAdmin.cc  XrdPosixAdmin.hh  XrdPosixCache.cc  XrdPosixCache.hh  XrdPosixExtern.hh  XrdPosixFile.cc  XrdPosixFile.hh  XrdPosixLinkage.cc  XrdPosixLinkage.hh  XrdPosixPreload.cc  XrdPosixXrootd.cc  XrdPosixXrootd.hh
src/XrdSfs/: XrdSfsInterface.cc  XrdSfsInterface.hh
tests/: CMakeLists.txt
tests/XRootD/: http.sh  posix.sh
tests/XrdCl/: CMakeLists.txt  XrdClFileSystemTest.cc  url.cc
tests/XrdHttpTests/: CMakeLists.txt  XrdHttpTests.cc
tests/XrdOucTests/: XrdOucUtilsTests.cc
tests/XrdPosix/: CMakeLists.txt  statx.cc
(+10 files in other folders)
